# axle

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
.github/workflows/: build.yml
bench/: async_echo_server.cpp  axle_bench_results.json  axle_bench_results_macos_aarch64_ef4c6b9.json
examples/async_echo_server/: main.cpp
examples/echo_server/: main.cpp
include/axle/: async_socket.h  axle.h  event.h  gate.h  scheduler.h  socket.h  status.h  tcp.h
sanitizers/asan/: asan_leak_supp_darwin_arm64.txt
src/: async_socket.cpp  axle.cpp  common.h  debug.h  event.cpp  fiber.cpp  fiber.h  fiber_arm64.cpp  fiber_arm64.h  fiber_platform.h  fiber_reg_off_arm64.h  fiber_reg_off_x64.h  fiber_regoff_arm64.h  fiber_x64.cpp  fiber_x64.h  gate.cpp  iouring.cpp  iouring.h  iouring_socket.cpp  iouring_socket.h  poller.cpp  poller.h  poller_bsd.cpp  poller_bsd.h  poller_common.h  poller_linux.cpp  poller_linux.h  sanitizer.h  scheduler.cpp  socket.cpp  socket_common.h
src/asm/: fiber_arm64.S  fiber_arm64.s  fiber_x64.S  platform.h
test/: async_socket_test.cpp  axle_test.cpp  event_test.cpp  fiber_test.cpp  gate_test.cpp  scheduler_test.cpp  status_test.cpp  test_common.h
tools/: bench-diff.py  install-deps.sh  setup-darwin.sh  setup-ubuntu.sh
